deployment/k8s-deployment-v1.0/ts-deployment-part3.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ts-ui-dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        # image: 10.141.211.160:5000/header_newpage/ts-ui-dashboard
        # image: kylinxiang/ts-ui-dashboard-service:1.0
        image: 10.141.211.160:5000/header/ts-ui-dashboard
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 32677
  selector:
   app: ts-ui-dashboard
---
